# landlock

./: BUG_FIXES.md  MULTI_AGENT_SYSTEM.md  README.md  TODO.md  package-lock.json  package.json  vitest.config.ts
__tests__/: crew-orchestrator.test.ts  data-sources.test.ts  insurance-risk-analyst.test.ts  state-manager.test.ts
backend/: .gitignore  QUICK_TEST.md  TESTING.md  cli.py  pyproject.toml  requirements.txt  setup_and_test.sh  test_basic.py
backend/backend/: __init__.py  config.py
backend/backend/agents/: __init__.py  budget_analyst.py  crew_agents.py  policy_analyst.py  production_crew.py  shared_state.py  underwriter.py
backend/backend/api/: __init__.py  main.py
backend/backend/extractors/: __init__.py  fact_extractor.py
backend/backend/models/: __init__.py  agent_outputs.py  citation.py  discovered_source.py  extracted_fact.py
backend/backend/pipeline/: __init__.py  runner.py
backend/backend/scraper/: __init__.py  discovery.py  scraper.py
backend/backend/storage/: __init__.py  source_registry.py  supabase_storage.py
backend/tests/: __init__.py  conftest.py  test_agents.py  test_extractors.py  test_models.py  test_scraper.py  test_source_registry.py
public/: HeatMapData.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/map/: page.tsx
src/components/: HazardMap.tsx
src/components/landing/: Features.tsx  Hero.tsx  Navigation.tsx  index.ts
src/components/left-sidebar/: LeftSidebar.tsx
src/components/right-sidebar/: AgentInsights.tsx  CostProjections.tsx  RightSidebar.tsx  RiskRankings.tsx  (+2 more)
src/lib/: fsaCoordinates.ts
(+17 files in other folders)
